Full OGM implementation with basic CRUD for curtain tables/nodes
Migration script from MySQL to Neo4j
